--- a/main.html
+++ b/main.html
@@ -1,1 +1,5 @@
-<h1> Page </h1>
+<h1> Page modificacion </h1>
+<div>
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+</div>
