agregando input secund

--- a/main.html
+++ b/main.html
@@ -2,4 +2,6 @@
 <div>
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
+ <label for="sname">Second name:</label>
+  <input type="text" id="sname" name="sname"><br><br>
 </div>
